docs: update (#325)